add wind direction and temperature

--- a/config.yaml
+++ b/config.yaml
@@ -3,27 +3,26 @@ spots:
     url: https://nl.windfinder.com/weatherforecast/brouwersdam
     emails:
       - je.vanderelst@gmail.com
-    threshold: 18
     min_hours: 3
-    start_hour: 8
-    end_hour: 20
+    windspeed_between: [12, 25]
+    hours_between: [8, 20]
+    temperature_above: 15
 
   knokke-heist:
     url: https://nl.windfinder.com/weatherforecast/knokke-heist
     emails:
       - je.vanderelst@gmail.com
-    threshold: 18
     min_hours: 3
-    start_hour: 8
-    end_hour: 20
+    windspeed_between: [12, 25]
+    hours_between: [8, 20]
+    temperature_above: 15
 
   oesterdam:
     url: https://nl.windfinder.com/weatherforecast/oosterschelde_oesterdam
     emails:
       - je.vanderelst@gmail.com
-    threshold: 18
     min_hours: 3
-    start_hour: 8
-    end_hour: 20
-    
-    
+    windspeed_between: [12, 25]
+    hours_between: [8, 20]
+    temperature_above: 15
+
